{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 8,
  "lineage": "95842a81-f2f7-9a48-cdae-9f9cc10913ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-052064a798f08f0d3",
            "arn": "arn:aws:ec2:us-east-1:203918840500:instance/i-05fc9be2186ba0c5e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05fc9be2186ba0c5e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "npelijahlinuxkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0604f5f84adbe303b"
              }
            ],
            "primary_network_interface_id": "eni-0604f5f84adbe303b",
            "private_dns": "ip-10-0-1-131.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.131",
            "public_dns": "ec2-3-226-241-125.compute-1.amazonaws.com",
            "public_ip": "3.226.241.125",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f1bd89564c8e6133",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fbeaee54cd897cb",
            "tags": {
              "Name": "nkereuwemelijah-webserver"
            },
            "tags_all": {
              "Name": "nkereuwemelijah-webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076a4f0ca4ff36e5a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203918840500",
            "id": "i-05fc9be2186ba0c5e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918840500:internet-gateway/igw-01686a58429520c36",
            "id": "igw-01686a58429520c36",
            "owner_id": "203918840500",
            "region": "us-east-1",
            "tags": {
              "Name": "nkereuwemelijah-igw"
            },
            "tags_all": {
              "Name": "nkereuwemelijah-igw"
            },
            "vpc_id": "vpc-061bb7c82545912c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918840500:route-table/rtb-08d74b261640b2285",
            "id": "rtb-08d74b261640b2285",
            "owner_id": "203918840500",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01686a58429520c36",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nkereuwemelijah-public-rt"
            },
            "tags_all": {
              "Name": "nkereuwemelijah-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-061bb7c82545912c3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203918840500",
            "id": "rtb-08d74b261640b2285",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068466a53e347e76d",
            "region": "us-east-1",
            "route_table_id": "rtb-08d74b261640b2285",
            "subnet_id": "subnet-09fbeaee54cd897cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918840500:security-group/sg-076a4f0ca4ff36e5a",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076a4f0ca4ff36e5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nkereuwemelijah-web-sg",
            "name_prefix": "",
            "owner_id": "203918840500",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nkereuwemelijah-web-sg"
            },
            "tags_all": {
              "Name": "nkereuwemelijah-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-061bb7c82545912c3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203918840500",
            "id": "sg-076a4f0ca4ff36e5a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918840500:subnet/subnet-09fbeaee54cd897cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fbeaee54cd897cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "203918840500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "nkereuwemelijah-public-subnet"
            },
            "tags_all": {
              "Name": "nkereuwemelijah-public-subnet"
            },
            "vpc_id": "vpc-061bb7c82545912c3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203918840500",
            "id": "subnet-09fbeaee54cd897cb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918840500:vpc/vpc-061bb7c82545912c3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0783c13fc61cf3d7b",
            "default_route_table_id": "rtb-0aee95dab663b99c5",
            "default_security_group_id": "sg-097bbbfd650b8d738",
            "dhcp_options_id": "dopt-0284a080d88c1f85c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-061bb7c82545912c3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aee95dab663b99c5",
            "owner_id": "203918840500",
            "region": "us-east-1",
            "tags": {
              "Name": "nkereuwemelijah-vpc"
            },
            "tags_all": {
              "Name": "nkereuwemelijah-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}